# ctor-lite

./: CHANGELOG.md  Cargo.toml  README.md
.woodpecker/: github.yml  msrv.yml  release.yml  renovate.yml  test.yml
src/: lib.rs
tests/: init.rs
